add frame animation

--- a/Desktop-Actor Code/Desktop Actor/Desktop Actor.csproj
+++ b/Desktop-Actor Code/Desktop Actor/Desktop Actor.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E5AC0A86-922E-43A9-A111-5FB96BC28B9C}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Desktop_Actor</RootNamespace>
     <AssemblyName>Desktop Actor</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation.cs" />
     <Compile Include="Configuration\AnimationConfig.cs" />
     <Compile Include="Animator.cs" />
     <Compile Include="Box.cs">
